test ipynb change commit

--- a/bin/consistency.ipynb
+++ b/bin/consistency.ipynb
@@ -297,7 +297,8 @@
     "plt.figure(1)\n",
     "plt.scatter(ll_list[1][mn].eras,ll_list[1][mn].log_loss,label='validation',color='orange')\n",
     "plt.legend()\n",
-    "plt.axhline(y=-np.log(0.5), xmin=0, xmax=1,color='k',linestyle='--')"
+    "plt.axhline(y=-np.log(0.5), xmin=0, xmax=1,color='k',linestyle='--')\n",
+    "# testing"
    ]
   },
   {
