--- a/bin/staking.ipynb
+++ b/bin/staking.ipynb
@@ -45,22 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-01-14 09:59:15,259 INFO numerapi.numerapi: getting stakes for round 0\n",
-      "2018-01-14 09:59:16,257 INFO numerapi.numerapi: getting leaderboard for round 0\n"
+      "2018-01-14 11:34:19,386 INFO numerapi.numerapi: getting stakes for round 0\n",
+      "2018-01-14 11:34:21,295 INFO numerapi.numerapi: getting leaderboard for round 0\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(848,) 107739.13\n"
+      "(882,) 117277.7\n"
      ]
     }
    ],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -85,34 +85,34 @@
       "text/plain": [
        "[{'consistency': 100.0,\n",
        "  'liveLogloss': None,\n",
+       "  'stake': {'confidence': '0.071',\n",
+       "   'insertedAt': '2018-01-14T09:34:58.356152Z',\n",
+       "   'soc': '253.52',\n",
+       "   'txHash': '0x5d06f018267f82c0837abf7ce60463827c05006ba3a0abc54972690cc08674da',\n",
+       "   'value': '18.00'},\n",
+       "  'username': 'mel',\n",
+       "  'validationLogloss': 0.6920526278100417},\n",
+       " {'consistency': 83.33333333333334,\n",
+       "  'liveLogloss': None,\n",
+       "  'stake': {'confidence': '0.035',\n",
+       "   'insertedAt': '2018-01-13T20:10:12.691064Z',\n",
+       "   'soc': '28.57',\n",
+       "   'txHash': '0x42345ae96496222ae73d0938e2b7e8ebd12a5c82cd54b2659178b8869c9f6686',\n",
+       "   'value': '1.00'},\n",
+       "  'username': 'objectscience',\n",
+       "  'validationLogloss': 0.6924736177369512},\n",
+       " {'consistency': 100.0,\n",
+       "  'liveLogloss': None,\n",
        "  'stake': {'confidence': '0.220',\n",
        "   'insertedAt': '2018-01-13T23:35:56.904747Z',\n",
        "   'soc': '18.18',\n",
        "   'txHash': '0x65e39700387561ee58024239ea3c5002456de16778b03be95ed65d97b3f7f00b',\n",
        "   'value': '4.00'},\n",
        "  'username': 'cygnus',\n",
-       "  'validationLogloss': 0.6920660647325698},\n",
-       " {'consistency': 100.0,\n",
-       "  'liveLogloss': None,\n",
-       "  'stake': {'confidence': '0.200',\n",
-       "   'insertedAt': '2018-01-14T01:59:29.343173Z',\n",
-       "   'soc': '50.00',\n",
-       "   'txHash': '0xbc11805a0dc61249b746edab6f63a2042355f57828e0d111eb4e00a0b8487cd2',\n",
-       "   'value': '10.00'},\n",
-       "  'username': 'fornax',\n",
-       "  'validationLogloss': 0.6886627042022047},\n",
-       " {'consistency': 91.66666666666666,\n",
-       "  'liveLogloss': None,\n",
-       "  'stake': {'confidence': '0.170',\n",
-       "   'insertedAt': '2018-01-14T12:06:16.3076Z',\n",
-       "   'soc': '294.12',\n",
-       "   'txHash': '0xe743f7672f85ebaaddca2b219b23b89a786ac726d59aa0461f64478a3e4e977b',\n",
-       "   'value': '50.00'},\n",
-       "  'username': 'kreator',\n",
-       "  'validationLogloss': 0.6921455756182459}]"
+       "  'validationLogloss': 0.6920660647325698}]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {
     "scrolled": false
    },
@@ -136,32 +136,54 @@
       "---- 18.18\n",
       "0.200*10.00=50.00\n",
       "---- 68.18\n",
+      "0.190*20.00=105.26\n",
+      "---- 173.44\n",
       "0.170*50.00=294.12\n",
-      "---- 362.3\n",
+      "---- 467.56\n",
       "0.160*40.00=250.00\n",
-      "---- 612.3\n",
+      "---- 717.56\n",
+      "0.150*40.00=266.67\n",
+      "---- 984.23\n",
+      "0.113*1.00=8.85\n",
+      "---- 993.08\n",
+      "0.112*1.00=8.93\n",
+      "---- 1002.01\n",
+      "0.111*1.00=9.01\n",
+      "---- 1011.02\n",
+      "0.087*5.00=57.47\n",
+      "---- 1068.49\n",
+      "0.087*1.00=11.49\n",
+      "---- 1079.98\n",
+      "0.087*5.00=57.47\n",
+      "---- 1137.45\n",
       "0.071*18.00=253.52\n",
-      "---- 865.8199999999999\n",
+      "---- 1390.97\n",
       "0.071*18.00=253.52\n",
-      "---- 1119.34\n",
+      "---- 1644.49\n",
       "0.071*18.00=253.52\n",
-      "---- 1372.86\n",
+      "---- 1898.01\n",
       "0.071*17.00=239.44\n",
-      "---- 1612.3\n",
+      "---- 2137.45\n",
       "0.070*35.00=500.00\n",
-      "---- 2112.3\n",
+      "---- 2637.45\n",
+      "0.050*1.00=20.00\n",
+      "---- 2657.45\n",
+      "0.050*80.00=1600.00\n",
+      "---- 4257.45\n",
+      "0.046*5.00=108.70\n",
+      "---- 4366.15\n",
       "0.045*10.00=222.22\n",
-      "---- 2334.52\n",
+      "---- 4588.37\n",
       "0.045*5.00=111.11\n",
-      "---- 2445.63\n",
+      "---- 4699.48\n",
       "0.045*5.00=111.11\n",
-      "---- 2556.7400000000002\n",
+      "---- 4810.589999999999\n",
       "0.040*1.00=25.00\n",
-      "---- 2581.7400000000002\n",
+      "---- 4835.589999999999\n",
       "0.035*1.00=28.57\n",
-      "---- 2610.3100000000004\n",
+      "---- 4864.159999999999\n",
       "0.010*10.00=1000.00\n",
-      "---- 3610.3100000000004\n"
+      "---- 5864.159999999999\n"
      ]
     }
    ],
@@ -173,6 +195,15 @@
     "    total+=float(r['stake']['soc'])\n",
     "    print('----',total)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
