synced disentanglegan based on disentangle

--- a/bin/consistency.ipynb
+++ b/bin/consistency.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -171,11 +171,11 @@
     "imp.reload(models)\n",
     "model_list = [\n",
     "#     ('aecgan',models.aec_gan.AecAdvModel,dict(istrain=False)),\n",
-    "#     ('aec',models.aec.AecModel,dict(istrain=False)),\n",
+    "     ('aec',models.aec.AecModel,dict(istrain=False)),\n",
     "#     ('xg',models.xg.XgModel,dict(istrain=False)),\n",
     "#     ('aecganxg',models.aec_gan_xg.AecGanXgModel,dict(istrain=False)),# depends on model from AecAdvModel\n",
     "#     ('aecgs',models.aec_gan_stack.AecAdvStackModel,dict(istrain=False)), # depends on model from AecAdvModel\n",
-    "#     ('ganmore',models.ganmore.GanMoreModel,dict(istrain=False)),\n",
+    "     ('ganmore',models.ganmore.GanMoreModel,dict(istrain=False)),\n",
     "     ('disentangle',models.disentangle.DisentangleModel,dict(istrain=False)),\n",
     "#     ('disentanglegan',models.disentanglegan.DisentangleGanModel,dict(istrain=False)),\n",
     "#     ('idg',models.icadisengan.IcaDisentangleGanModel,dict(istrain=False)),\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "(46362,)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,15 +216,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yoyoteng/anaconda3/envs/py35/lib/python3.5/site-packages/numpy/core/fromnumeric.py:57: FutureWarning: 'argmin' is deprecated. Use 'idxmin' instead. The behavior of 'argmin' will be corrected to return the positional minimum in the future. Use 'series.values.argmin' to get the position of the minimum now.\n",
+      "  return getattr(obj, method)(*args, **kwds)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trainpath disentangle cons:0.6750 logloss:0.6926\n",
-      "testpath disentangle cons:0.8333 logloss:0.6921\n"
+      "(393613, 1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yoyoteng/anaconda3/envs/py35/lib/python3.5/site-packages/sklearn/metrics/classification.py:1694: RuntimeWarning: divide by zero encountered in log\n",
+      "  loss = -(transformed_labels * np.log(y_pred)).sum(axis=1)\n",
+      "/home/yoyoteng/anaconda3/envs/py35/lib/python3.5/site-packages/sklearn/metrics/classification.py:1694: RuntimeWarning: invalid value encountered in multiply\n",
+      "  loss = -(transformed_labels * np.log(y_pred)).sum(axis=1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trainpath aec cons:0.6667 logloss:0.6926\n",
+      "trainpath disentangle cons:0.7083 logloss:0.6924\n",
+      "trainpath ganmore cons:1.0000 logloss:0.0000\n",
+      "(243401, 1)\n"
      ]
     }
    ],
