--- a/bin/staking.ipynb
+++ b/bin/staking.ipynb
@@ -45,22 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-01-14 11:34:19,386 INFO numerapi.numerapi: getting stakes for round 0\n",
-      "2018-01-14 11:34:21,295 INFO numerapi.numerapi: getting leaderboard for round 0\n"
+      "2018-01-14 12:29:49,787 INFO numerapi.numerapi: getting stakes for round 0\n",
+      "2018-01-14 12:29:51,055 INFO numerapi.numerapi: getting leaderboard for round 0\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(882,) 117277.7\n"
+      "(900,) 121464.68\n"
      ]
     }
    ],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -94,25 +94,25 @@
        "  'validationLogloss': 0.6920526278100417},\n",
        " {'consistency': 83.33333333333334,\n",
        "  'liveLogloss': None,\n",
+       "  'stake': {'confidence': '0.075',\n",
+       "   'insertedAt': '2018-01-14T19:56:31.904578Z',\n",
+       "   'soc': '1333.33',\n",
+       "   'txHash': '0x8527760e5d33c8308d981fbab503da2aa4a51731daa138ac3220a18e9e0930a6',\n",
+       "   'value': '100.00'},\n",
+       "  'username': 'bps',\n",
+       "  'validationLogloss': 0.6930473164983806},\n",
+       " {'consistency': 83.33333333333334,\n",
+       "  'liveLogloss': None,\n",
        "  'stake': {'confidence': '0.035',\n",
        "   'insertedAt': '2018-01-13T20:10:12.691064Z',\n",
        "   'soc': '28.57',\n",
        "   'txHash': '0x42345ae96496222ae73d0938e2b7e8ebd12a5c82cd54b2659178b8869c9f6686',\n",
        "   'value': '1.00'},\n",
        "  'username': 'objectscience',\n",
-       "  'validationLogloss': 0.6924736177369512},\n",
-       " {'consistency': 100.0,\n",
-       "  'liveLogloss': None,\n",
-       "  'stake': {'confidence': '0.220',\n",
-       "   'insertedAt': '2018-01-13T23:35:56.904747Z',\n",
-       "   'soc': '18.18',\n",
-       "   'txHash': '0x65e39700387561ee58024239ea3c5002456de16778b03be95ed65d97b3f7f00b',\n",
-       "   'value': '4.00'},\n",
-       "  'username': 'cygnus',\n",
-       "  'validationLogloss': 0.6920660647325698}]"
+       "  'validationLogloss': 0.6924736177369512}]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {
     "scrolled": false
    },
@@ -156,44 +156,55 @@
       "---- 1079.98\n",
       "0.087*5.00=57.47\n",
       "---- 1137.45\n",
+      "0.075*100.00=1333.33\n",
+      "---- 2470.7799999999997\n",
       "0.071*18.00=253.52\n",
-      "---- 1390.97\n",
+      "---- 2724.2999999999997\n",
       "0.071*18.00=253.52\n",
-      "---- 1644.49\n",
+      "---- 2977.8199999999997\n",
       "0.071*18.00=253.52\n",
-      "---- 1898.01\n",
+      "---- 3231.3399999999997\n",
+      "====================\n",
       "0.071*17.00=239.44\n",
-      "---- 2137.45\n",
+      "---- 3470.7799999999997\n",
       "0.070*35.00=500.00\n",
-      "---- 2637.45\n",
+      "---- 3970.7799999999997\n",
       "0.050*1.00=20.00\n",
-      "---- 2657.45\n",
+      "---- 3990.7799999999997\n",
       "0.050*80.00=1600.00\n",
-      "---- 4257.45\n",
+      "---- 5590.78\n",
+      "^^^^^^^^^^^\n",
       "0.046*5.00=108.70\n",
-      "---- 4366.15\n",
+      "---- 5699.48\n",
       "0.045*10.00=222.22\n",
-      "---- 4588.37\n",
+      "---- 5921.7\n",
       "0.045*5.00=111.11\n",
-      "---- 4699.48\n",
+      "---- 6032.8099999999995\n",
       "0.045*5.00=111.11\n",
-      "---- 4810.589999999999\n",
+      "---- 6143.919999999999\n",
       "0.040*1.00=25.00\n",
-      "---- 4835.589999999999\n",
+      "---- 6168.919999999999\n",
       "0.035*1.00=28.57\n",
-      "---- 4864.159999999999\n",
+      "---- 6197.489999999999\n",
       "0.010*10.00=1000.00\n",
-      "---- 5864.159999999999\n"
+      "---- 7197.489999999999\n"
      ]
     }
    ],
    "source": [
     "slb=sorted(slb,key=lambda x: x['stake']['confidence'], reverse=True)\n",
     "total=0\n",
+    "p=True\n",
     "for r in slb:\n",
     "    print('{}*{}={}'.format(r['stake']['confidence'],r['stake']['value'],r['stake']['soc']))\n",
     "    total+=float(r['stake']['soc'])\n",
-    "    print('----',total)"
+    "    \n",
+    "    print('----',total)\n",
+    "    if total > 3000 and p:\n",
+    "        p=False\n",
+    "        print('====================')\n",
+    "    if r['username'] == 'ted':\n",
+    "        print('^^^^^^^^^^^')"
    ]
   },
   {
